chore: update env

--- a/compose.yml
+++ b/compose.yml
@@ -13,6 +13,9 @@ services:
       - PUID=
       - PGID=
       - TZ=Etc/UTC
+      - NEXT_PUBLIC_LIDARR_API_KEY=
+      - NEXT_PUBLIC_LIDARR_URL=
+      - NEXT_PUBLIC_TIDARR_URL=
       
 
      
