feat: query lidarr

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-NEXT_PUBLIC_LIDARR_API_KEY=
-NEXT_PUBLIC_LIDARR_URL=
+LIDARR_API_KEY=
+LIDARR_URL=
 NEXT_PUBLIC_TIDARR_URL=
 API_PORT=8585
 HOSTNAME=
