--- a/compose.yml
+++ b/compose.yml
@@ -2,22 +2,15 @@ version: "3"
 
 services:
   shazarr:
-    build: './docker'
-    container_name: 'shazarr'
+    build: "./docker"
+    container_name: "shazarr"
     ports:
       - 12358:12358
-    restart: 'unless-stopped'
+    restart: "unless-stopped"
     volumes:
       - .:/home/app/standalone
     environment:
-      - PUID=
-      - PGID=
-      - TZ=Etc/UTC
       - LIDARR_API_KEY=
       - LIDARR_URL=
       - LIDARR_LIBRARY_PATH=
-      - NEXT_PUBLIC_TIDARR_URL=
-      
-
-     
-
+      - TIDARR_URL=
