--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,7 @@
     "@capacitor/core": "^5.6.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@ionic/storage": "^4.0.0",
     "@mui/icons-material": "^5.15.1",
     "@mui/material": "^5.15.1",
     "@types/node": "^16.18.70",
