--- a/app/package.json
+++ b/app/package.json
@@ -6,9 +6,9 @@
     "@capacitor/android": "5.6.0",
     "@capacitor/cli": "^5.6.0",
     "@capacitor/core": "^5.6.0",
+    "@capacitor/preferences": "^5.0.6",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@ionic/storage": "^4.0.0",
     "@mui/icons-material": "^5.15.1",
     "@mui/material": "^5.15.1",
     "@types/node": "^16.18.70",
@@ -20,12 +20,14 @@
     "typescript": "^4"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@capacitor/assets": "^3.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build-android": "ionic capacitor build android"
   },
   "eslintConfig": {
     "extends": [
