--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,8 @@
     "@capacitor/android": "5.6.0",
     "@capacitor/cli": "^5.6.0",
     "@capacitor/core": "^5.6.0",
+    "@capacitor/haptics": "^5.0.6",
+    "@capacitor/ios": "^5.6.0",
     "@capacitor/preferences": "^5.0.6",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
