--- a/app/android/app/capacitor.build.gradle
+++ b/app/android/app/capacitor.build.gradle
@@ -11,6 +11,7 @@ apply from: "../capacitor-cordova-android-plugins/cordova.variables.gradle"
 dependencies {
     implementation project(':capacitor-haptics')
     implementation project(':capacitor-preferences')
+    implementation project(':capacitor-voice-recorder')
 
 }
 
