--- a/package.json
+++ b/package.json
@@ -16,29 +16,26 @@
     "@ffmpeg/ffmpeg": "^0.6.1",
     "@mui/icons-material": "^5.15.1",
     "@mui/material": "^5.15.1",
-    "@types/audiobuffer-to-wav": "^1.0.4",
-    "@types/node": "^16.18.70",
-    "@types/react": "^18.2.47",
-    "@types/react-dom": "^18.2.18",
     "audiobuffer-to-wav": "^1.0.0",
     "capacitor-voice-recorder": "^5.0.0",
-    "inline-worker": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0",
     "react-scripts": "^5.0.1",
-    "shazam-api": "^0.1.3",
-    "typescript": "^4",
-    "wav-blob-util": "^1.0.21"
+    "shazam-api": "0.1.3",
+    "typescript": "^4"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@capacitor/assets": "^3.0.4",
-    "@types/react-helmet": "^6.1.11",
-    "patch-package": "^8.0.0"
+    "@types/audiobuffer-to-wav": "^1.0.4",
+    "@types/node": "^16.18.70",
+    "@types/react": "^18.2.47",
+    "@types/react-dom": "^18.2.18",
+    "patch-package": "^8.0.0",
+    "source-map-loader": "^5.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "HTTPS=true react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "ios:open": "ionic capacitor open ios",
