--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@ffmpeg/ffmpeg": "^0.6.1",
     "@mui/icons-material": "^5.15.1",
     "@mui/material": "^5.15.1",
+    "@uidotdev/usehooks": "^2.4.1",
     "capacitor-voice-recorder": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
