--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@capacitor/device": "^5.0.6",
     "@capacitor/haptics": "^5.0.6",
     "@capacitor/ios": "^5.6.0",
+    "@capacitor/local-notifications": "^5.0.7",
     "@capacitor/network": "^5.0.6",
     "@capacitor/preferences": "^5.0.6",
     "@emotion/react": "^11.11.1",
