--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@capacitor/android": "5.6.0",
+    "@capacitor/app": "^5.0.7",
     "@capacitor/cli": "^5.6.0",
     "@capacitor/core": "^5.6.0",
     "@capacitor/device": "^5.0.6",
