--- a/package.json
+++ b/package.json
@@ -31,11 +31,20 @@
     "@types/node": "^16.18.70",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
+    "@typescript-eslint/eslint-plugin": "^7.0.1",
+    "@typescript-eslint/parser": "^7.0.1",
+    "depcheck": "^1.4.7",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "patch-package": "^8.0.0",
-    "source-map-loader": "^5.0.0"
+    "prettier": "^3.2.5",
+    "source-map-loader": "^5.0.0",
+    "ts-prune": "^0.10.3"
   },
   "scripts": {
-    "start": "HTTPS=true react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "ios:open": "ionic capacitor open ios",
@@ -44,6 +53,10 @@
     "android:open": "ionic capacitor open android",
     "android:build": "ionic capacitor build android",
     "android:live": "ionic capacitor run android -l --external",
+    "find-deadcode": "ts-prune | (! grep -v 'used in module')",
+    "depcheck": "npx depcheck",
+    "eslint": "eslint src",
+    "eslint-fix": "eslint --fix src",
     "postinstall": "patch-package"
   },
   "eslintConfig": {
