--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@capacitor/assets": "^3.0.4",
+    "@playwright/test": "^1.44.0",
     "@types/node": "^16.18.70",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
@@ -37,9 +38,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "patch-package": "^8.0.0",
     "prettier": "^3.2.5",
-    "source-map-loader": "^5.0.0",
     "ts-prune": "^0.10.3",
     "typescript": "^4"
   },
@@ -53,10 +52,15 @@
     "android:open": "ionic capacitor open android",
     "android:build": "ionic capacitor build android",
     "android:live": "ionic capacitor run android -l --external",
-    "find-deadcode": "ts-prune | (! grep -v 'used in module')",
-    "depcheck": "npx depcheck",
-    "eslint": "eslint src",
-    "eslint-fix": "eslint --fix src"
+    "quality:deadcode": "ts-prune | (! grep -v 'used in module')",
+    "quality:depcheck": "npx depcheck",
+    "quality:eslint": "eslint src",
+    "quality:eslint-fix": "eslint --fix src",
+    "testing:run": "docker run --rm -it  -v .:/srv -w /srv mcr.microsoft.com/playwright:v1.44.0-jammy npx playwright test",
+    "testing:ui": "npx playwright test --ui",
+    "testing:ci": "docker run --rm -e CI=true -v .:/srv -w /srv mcr.microsoft.com/playwright:v1.44.0-jammy npx playwright test",
+    "testing:show-report": "docker run --rm -it -p 9323:9323 -v .:/srv -w /srv mcr.microsoft.com/playwright:v1.44.0-jammy npx playwright show-report ./testing/playwright-report --host 0.0.0.0",
+    "testing:update-snapshots": "docker run --rm -it  -v .:/srv -w /srv mcr.microsoft.com/playwright:v1.44.0-jammy npx playwright test --update-snapshots"
   },
   "eslintConfig": {
     "extends": [
