--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "shazam-api": "0.2.0"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@capacitor/assets": "^3.0.5",
     "@playwright/test": "^1.44.0",
     "@types/node": "^16.18.70",
@@ -38,6 +37,8 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "4.6.2",
     "prettier": "^3.2.5",
     "ts-prune": "^0.10.3",
     "typescript": "^4"
@@ -54,8 +55,8 @@
     "android:live": "ionic capacitor run android -l --external",
     "quality:deadcode": "ts-prune | (! grep -v 'used in module')",
     "quality:depcheck": "npx depcheck",
-    "quality:eslint": "eslint src",
-    "quality:eslint-fix": "eslint --fix src",
+    "quality:eslint": "eslint .",
+    "quality:eslint-fix": "eslint --fix .",
     "testing:run": "docker run --rm -it  -v .:/srv -w /srv mcr.microsoft.com/playwright:v1.44.0-jammy npx playwright test",
     "testing:ui": "npx playwright test --ui",
     "testing:ci": "docker run --rm -e CI=true -v .:/srv -w /srv mcr.microsoft.com/playwright:v1.44.0-jammy npx playwright test",
