--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,9 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
+  "baseUrl": "src",
   "include": [
-    "src"
+    "src",
+    "testing",
   ]
 }
