--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,10 +11,34 @@
   "plugins": [
     "@typescript-eslint",
     "jsx-a11y",
-    "prettier"
+    "prettier",
+    "react",
+    "simple-import-sort"
   ],
-  "rules": {
-    "prettier/prettier": "error"
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   },
-  "ignorePatterns": ["node_modules", "public", "build", "android", "ios"]
+  "rules": {
+    "prettier/prettier": "error",
+    "simple-import-sort/imports": ["error", {
+      "groups": [
+        // Packages `react` related packages come first.
+        ["^react", "^@?\\w"],
+        // Internal packages.
+        ["^(@|components)(/.*|$)"],
+        // Side effect imports.
+        ["^\\u0000"],
+        // Parent imports. Put `..` last.
+        ["^\\.\\.(?!/?$)", "^\\.\\./?$"],
+        // Other relative imports. Put same-folder imports and `.` last.
+        ["^\\./(?=.*/)(?!/?$)", "^\\.(?!/?$)", "^\\./?$"],
+        // Style imports.
+        ["^.+\\.?(css)$"]
+      ]
+    }],
+    "simple-import-sort/exports": "error"
+  },
+  "ignorePatterns": ["node_modules", "public", "playwright-report", "build", "android", "ios"]
 }
