--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Run Playwright tests
         run: npm run testing:ci
       - uses: actions/upload-artifact@v4
-        if: always()
+        if: failure()
         with:
           name: playwright-report
           path: ./testing/playwright-report/
@@ -29,7 +29,8 @@ jobs:
   publish_report:
     name: Publish HTML Report
     # using always() is not ideal here, because it would also run if the workflow was cancelled
-    if: "success() || needs.test.result == 'failure'"
+    # if: "success() || needs.test.result == 'failure'"
+    if: failure()
     needs: [test]
     runs-on: ubuntu-latest
     continue-on-error: true
