--- a/package.json
+++ b/package.json
@@ -6,49 +6,49 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
-    "@capacitor/android": "^6.0.0",
+    "@capacitor/android": "^6.1.0",
     "@capacitor/app": "^6.0.0",
-    "@capacitor/core": "^6.0.0",
+    "@capacitor/core": "^6.1.0",
     "@capacitor/device": "^6.0.0",
     "@capacitor/haptics": "^6.0.0",
-    "@capacitor/ios": "^6.0.0",
+    "@capacitor/ios": "^6.1.0",
     "@capacitor/local-notifications": "^6.0.0",
     "@capacitor/network": "^6.0.0",
     "@capacitor/preferences": "^6.0.0",
     "@capacitor/screen-orientation": "^6.0.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^5.15.18",
-    "@mui/material": "^5.15.18",
+    "@mui/icons-material": "^5.15.20",
+    "@mui/material": "^5.15.20",
     "@uidotdev/usehooks": "^2.4.1",
     "capacitor-voice-recorder": "^5.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "^5.0.1",
-    "shazam-api": "0.2.0"
+    "shazam-api": "^0.2.0"
   },
   "devDependencies": {
+    "@babel/plugin-transform-private-property-in-object": "^7.24.7",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@capacitor/assets": "^3.0.5",
-    "@capacitor/cli": "^6.0.0",
+    "@capacitor/cli": "^6.1.0",
+    "@eslint/js": "^9.4.0",
     "@ionic/cli": "^7.2.0",
     "@playwright/test": "^1.44.1",
-    "@types/node": "^20.12.13",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.11.0",
-    "@typescript-eslint/parser": "^7.11.0",
+    "@typescript-eslint/parser": "^7.13.0",
     "depcheck": "^1.4.7",
-    "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-simple-import-sort": "^12.1.0",
-    "prettier": "^3.2.5",
+    "prettier": "^3.3.2",
     "ts-prune": "^0.10.3",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.13.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -72,7 +72,7 @@
   },
   "overrides": {
     "typescript": "^5.4.5",
-    "@capacitor/core": "^6.0.0"
+    "@capacitor/core": "^6.1.0"
   },
   "browserslist": {
     "production": [
