--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -28,16 +28,8 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install ESLint + Prettier
-        run: |
-          npm install @eslint/js@9.4.0
-          npm install typescript-eslint@latest
-          npm install @microsoft/eslint-formatter-sarif@3.1
-          npm install eslint-plugin-jsx-a11y
-          npm install eslint-config-prettier
-          npm install eslint-plugin-prettier
-          npm install prettier
-      - uses: sibiraj-s/action-eslint@v3
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }} # optional
-          extensions: 'js,jsx,ts,tsx,mjs'
-          annotations: true
+        run: npm install
+          
+      - name: run ESLint + Prettier
+        run: npm run quality:eslint
+
