--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": ">=20.0.0"
+    "node": ">=18",
+    "npm": ">=10"
   },
   "dependencies": {
     "@capacitor/android": "^6.1.0",
@@ -32,12 +33,11 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@capacitor/assets": "^3.0.5",
     "@capacitor/cli": "^6.1.0",
-    "@eslint/js": "^9.4.0",
+    "@eslint/js": "^9.5.0",
     "@ionic/cli": "^7.2.0",
     "@playwright/test": "^1.44.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/parser": "^7.13.0",
     "depcheck": "^1.4.7",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
