--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 GENERATE_SOURCEMAP=false
-REACT_APP_REPO_API_URL="/cstaelen/shazarr"
-REACT_APP_CURRENT_VERSION="v0.1.2"
+VITE_REPO_API_URL="/cstaelen/shazarr"
+VITE_CURRENT_VERSION="v0.1.2"
