--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -3,6 +3,6 @@
     "appName": "Shazarr",
     "bundledWebRuntime": false,
     "npmClient": "npm",
-    "webDir": "build",
+    "webDir": "dist",
     "cordova": {}
   }
