--- a/package.json
+++ b/package.json
@@ -26,41 +26,42 @@
     "capacitor-voice-recorder": "^6.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scripts": "^5.0.1",
     "shazam-api": "^0.2.1-0"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/plugin-transform-private-property-in-object": "^7.25.9",
     "@capacitor/assets": "^3.0.5",
     "@capacitor/cli": "^7.0.1",
     "@eslint/js": "^9.19.0",
-    "@ionic/cli": "^7.2.0",
-    "@playwright/test": "^1.50.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "@ionic/cli": "^7.2.0",
+    "@playwright/test": "^1.50.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "depcheck": "^1.4.7",
-    "eslint-config-prettier": "^10.0.1",
+    "eslint": "^9.19.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-prettier": "^5.2.3",
-    "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.18",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "globals": "^15.14.0",
     "prettier": "^3.4.2",
     "ts-prune": "^0.10.3",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.22.0"
+    "typescript-eslint": "^8.23.0",
+    "vite": "^6.0.11"
+
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject",
+    "start": "vite dev",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "ionic:serve": "npm run start",
     "ios:open": "ionic capacitor open ios",
-    "ios:build": "ionic capacitor build ios",
-    "ios:live": "ionic capacitor run ios -l --external",
+    "ios:sync": "npx cap sync ios",
+    "ios:live": "ionic capacitor run ios -l --external --port 5173",
     "android:open": "ionic capacitor open android",
-    "android:build": "ionic capacitor build android",
-    "android:live": "ionic capacitor run android -l --external",
+    "android:sync": "npx cap sync android",
+    "android:live": "ionic capacitor run android -l --external --port 5173",
     "quality:deadcode": "ts-prune | (! grep -v 'used in module')",
     "quality:depcheck": "npx depcheck",
     "quality:eslint": "eslint .",
