--- a/package.json
+++ b/package.json
@@ -1,78 +1,80 @@
 {
   "name": "shazarr-app",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "private": true,
   "engines": {
     "node": ">=18",
     "npm": ">=10"
   },
   "dependencies": {
-    "@capacitor/android": "^6.1.0",
-    "@capacitor/app": "^6.0.0",
-    "@capacitor/core": "^6.1.0",
-    "@capacitor/device": "^6.0.0",
-    "@capacitor/haptics": "^6.0.0",
-    "@capacitor/ios": "^6.1.0",
-    "@capacitor/local-notifications": "^6.0.0",
-    "@capacitor/network": "^6.0.0",
-    "@capacitor/preferences": "^6.0.0",
-    "@capacitor/screen-orientation": "^6.0.0",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^5.15.20",
-    "@mui/material": "^5.15.20",
+    "@capacitor/android": "^7.0.1",
+    "@capacitor/app": "^7.0.0",
+    "@capacitor/core": "^7.0.1",
+    "@capacitor/device": "^7.0.0",
+    "@capacitor/haptics": "^7.0.0",
+    "@capacitor/ios": "^7.0.1",
+    "@capacitor/local-notifications": "^7.0.0",
+    "@capacitor/network": "^7.0.0",
+    "@capacitor/preferences": "^7.0.0",
+    "@capacitor/screen-orientation": "^7.0.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.2",
+    "@mui/material": "^6.4.2",
+    "@typescript-eslint/parser": "^8.22.0",
     "@uidotdev/usehooks": "^2.4.1",
-    "capacitor-voice-recorder": "^5.0.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-scripts": "^5.0.1",
-    "shazam-api": "^0.2.0"
+    "capacitor-voice-recorder": "^6.0.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "shazam-api": "^0.2.1-0"
   },
   "devDependencies": {
-    "@babel/plugin-transform-private-property-in-object": "^7.24.7",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@capacitor/assets": "^3.0.5",
-    "@capacitor/cli": "^6.1.0",
-    "@eslint/js": "^9.5.0",
+    "@capacitor/cli": "^7.0.1",
+    "@eslint/js": "^9.19.0",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
     "@ionic/cli": "^7.2.0",
-    "@playwright/test": "^1.44.1",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@playwright/test": "^1.50.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "depcheck": "^1.4.7",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.2",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-simple-import-sort": "^12.1.0",
-    "prettier": "^3.3.2",
+    "eslint": "^9.19.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.18",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "globals": "^15.14.0",
+    "prettier": "^3.4.2",
     "ts-prune": "^0.10.3",
-    "typescript": "^5.4.5",
-    "typescript-eslint": "^7.13.0"
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.23.0",
+    "vite": "^6.0.11"
+
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject",
+    "start": "vite dev",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "ionic:serve": "npm run start",
     "ios:open": "ionic capacitor open ios",
-    "ios:build": "ionic capacitor build ios",
-    "ios:live": "ionic capacitor run ios -l --external",
+    "ios:sync": "npx cap sync ios",
+    "ios:live": "ionic capacitor run ios -l --external --port 5173",
     "android:open": "ionic capacitor open android",
-    "android:build": "ionic capacitor build android",
-    "android:live": "ionic capacitor run android -l --external",
+    "android:sync": "npx cap sync android",
+    "android:live": "ionic capacitor run android -l --external --port 5173",
     "quality:deadcode": "ts-prune | (! grep -v 'used in module')",
     "quality:depcheck": "npx depcheck",
     "quality:eslint": "eslint .",
     "quality:eslint-fix": "eslint --fix .",
-    "testing:run": "docker run --rm -it  -v .:/srv -w /srv mcr.microsoft.com/playwright:v1.44.1-jammy npx playwright test",
+    "testing:run": "docker run --rm -it  -v .:/srv -w /srv mcr.microsoft.com/playwright:v1.50.0-noble npm i && npx playwright test",
     "testing:ui": "npx playwright test --ui",
-    "testing:ci": "docker run --rm -e CI=true -v .:/srv -w /srv mcr.microsoft.com/playwright:v1.44.1-jammy npx playwright test",
-    "testing:show-report": "docker run --rm -it -p 9323:9323 -v .:/srv -w /srv mcr.microsoft.com/playwright:v1.44.1-jammy npx playwright show-report ./testing/playwright-report --host 0.0.0.0",
-    "testing:update-snapshots": "docker run --rm -it  -v .:/srv -w /srv mcr.microsoft.com/playwright:v1.44.1-jammy npx playwright test --update-snapshots"
+    "testing:ci": "docker run --rm -e CI=true -v .:/srv -w /srv mcr.microsoft.com/playwright:v1.50.0-noble npx playwright test",
+    "testing:show-report": "docker run --rm -it -p 9323:9323 -v .:/srv -w /srv mcr.microsoft.com/playwright:v1.50.0-noble npx playwright show-report ./testing/playwright-report --host 0.0.0.0",
+    "testing:update-snapshots": "docker run --rm -it  -v .:/srv -w /srv mcr.microsoft.com/playwright:v1.50.0-noble npx playwright test --update-snapshots"
   },
   "overrides": {
-    "typescript": "^5.4.5",
-    "@capacitor/core": "^6.1.0"
+    "typescript": "^5.7.3",
+    "@capacitor/core": "^7.0.1"
   },
   "browserslist": {
     "production": [
