chore: move to pnpm + update sdk 35

--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -24,12 +24,24 @@ jobs:
       security-events: write
       actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install ESLint + Prettier
-        run: npm install
+      - uses: pnpm/action-setup@v4
+        name: Install pnpm
+        with:
+          version: 10
+          run_install: false
+
+      - name: Install Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'pnpm'
+
+      - name: Install dependencies
+        run: pnpm install
           
       - name: run ESLint + Prettier
-        run: npm run quality:eslint
+        run: pnpm run quality:eslint
 
