--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -11,14 +11,26 @@ jobs:
     runs-on: ubuntu-latest
     name: 'Playwright Tests'
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - uses: pnpm/action-setup@v4
+        name: Install pnpm
+        with:
+          version: 10
+          run_install: false
+
       - uses: actions/setup-node@v4
         with:
           node-version: "22.x"
+          cache: 'pnpm'
+
       - name: Install dependencies
-        run: npm install
+        run: pnpm install
+
       - name: Run Playwright tests
-        run: npm run testing:ci
+        run: pnpm run testing:ci
+        
       - uses: actions/upload-artifact@v4
         if: failure()
         with:
