--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shazarr-app",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "private": true,
   "engines": {
     "node": ">=18",
@@ -9,7 +9,7 @@
   "dependencies": {
     "@capacitor/android": "^7.2.0",
     "@capacitor/app": "^7.0.1",
-    "@capacitor/core": "^7.0.1",
+    "@capacitor/core": "^7.2.0",
     "@capacitor/device": "^7.0.1",
     "@capacitor/haptics": "^7.0.1",
     "@capacitor/ios": "^7.2.0",
@@ -20,7 +20,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.1",
-    "@mui/material": "^7.0.0",
+    "@mui/material": "^7.0.1",
     "@typescript-eslint/parser": "^8.29.0",
     "@uidotdev/usehooks": "^2.4.1",
     "capacitor-voice-recorder": "^7.0.5",
@@ -46,7 +46,7 @@
     "globals": "^16.0.0",
     "prettier": "^3.5.3",
     "ts-prune": "^0.10.3",
-    "typescript": "^5.7.3",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.29.0",
     "vite": "^6.2.5"
 
@@ -55,7 +55,7 @@
     "start": "vite dev",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "ionic:serve": "npm run start",
+    "ionic:serve": "pnpm run start",
     "ios:open": "ionic capacitor open ios",
     "ios:sync": "npx cap sync ios",
     "ios:live": "ionic capacitor run ios -l --external --port 5173",
@@ -66,15 +66,11 @@
     "quality:depcheck": "npx depcheck",
     "quality:eslint": "eslint .",
     "quality:eslint-fix": "eslint --fix .",
-    "testing:run": "docker run --rm -it  -v .:/srv -w /srv mcr.microsoft.com/playwright:v1.51.0-noble npm i && npx playwright test",
+    "testing:run": "docker run --rm -it  -v .:/srv -w /srv mcr.microsoft.com/playwright:v1.51.1-noble npm i && npx playwright test",
     "testing:ui": "npx playwright test --ui",
-    "testing:ci": "docker run --rm -e CI=true -v .:/srv -w /srv mcr.microsoft.com/playwright:v1.51.0-noble npx playwright test",
-    "testing:show-report": "docker run --rm -it -p 9323:9323 -v .:/srv -w /srv mcr.microsoft.com/playwright:v1.51.0-noble npx playwright show-report ./testing/playwright-report --host 0.0.0.0",
-    "testing:update-snapshots": "docker run --rm -it  -v .:/srv -w /srv mcr.microsoft.com/playwright:v1.51.0-noble npx playwright test --update-snapshots"
-  },
-  "overrides": {
-    "typescript": "^5.7.3",
-    "@capacitor/core": "^7.0.1"
+    "testing:ci": "docker run --rm -e CI=true -v .:/srv -w /srv mcr.microsoft.com/playwright:v1.51.1-noble npx playwright test",
+    "testing:show-report": "docker run --rm -it -p 9323:9323 -v .:/srv -w /srv mcr.microsoft.com/playwright:v1.51.1-noble npx playwright show-report ./testing/playwright-report --host 0.0.0.0",
+    "testing:update-snapshots": "docker run --rm -it  -v .:/srv -w /srv mcr.microsoft.com/playwright:v1.51.1-noble npx playwright test --update-snapshots"
   },
   "browserslist": {
     "production": [
