--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@typescript-eslint/parser": "^8.44.0",
     "@uidotdev/usehooks": "^2.4.1",
     "capacitor-voice-recorder": "^7.0.6",
+    "node": "^24.8.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "shazam-api": "^0.3.0"
@@ -32,10 +33,10 @@
     "@capacitor/assets": "^3.0.5",
     "@capacitor/cli": "^7.4.3",
     "@eslint/js": "^9.35.0",
-    "@types/react": "^19.1.13",
-    "@types/react-dom": "^19.1.9",
     "@ionic/cli": "^7.2.1",
     "@playwright/test": "^1.55.0",
+    "@types/react": "^19.1.13",
+    "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.3",
     "depcheck": "^1.4.7",
     "eslint": "^9.35.0",
@@ -49,7 +50,6 @@
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.44.0",
     "vite": "^7.1.6"
-
   },
   "scripts": {
     "start": "vite dev",
